changed headers, fixed form overflow

--- a/styles.css
+++ b/styles.css
@@ -56,16 +56,15 @@ li {
 	margin-right: auto;
 }
 
-.search h3 {
+.search h1 {
 	font-size: 1.375rem;
 	font-weight: 700;
-	line-height: 1rem;
-	line-height: 100%;
+	font-size: 22px;
 }
 
-.search h4 {
+.search h2 {
 	font-weight: 400;
-	font-size: 1rem;
+	font-size: 16px;
 }
 
 .links a {
@@ -229,7 +228,7 @@ form input {
 	padding-left: 16px;
 	font-size: 1.375rem;
 	font-weight: 700;
-	margin-bottom: 0.625rem;
+	margin-bottom: 20px;
 }
 
 .image img {
@@ -336,9 +335,21 @@ form input {
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
-	list-style: none;
-	margin-bottom: 0;
-	padding-left: 0;
+	align-items: center;
+	margin-bottom: 20px;
+	padding: 0;
+}
+
+.most-popular h2 {
+	font-family: 'Raleway', sans-serif;
+	margin: 0;
+	font-size: 1.35rem;
+	font-weight: 700;
+}
+
+.most-popular .fa-chart-line {
+	color: #0065FC;
+	font-size: 1.35rem;
 }
 
 .popular-box {
@@ -372,7 +383,7 @@ form input {
 	height: 100%;
 	display: flex;
 	flex-flow: column;
-	justify-content: space-evenly;
+	justify-content: space-between;
 }
 
 .popular-content {
@@ -430,18 +441,6 @@ form input {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 50px;
-}
-
-
-.most-popular li:first-child {
-	font-family: 'Raleway', sans-serif;
-	font-size: 1.35rem;
-	font-weight: 700;
-}
-
-.most-popular .fa-chart-line {
-	color: #0065FC;
-	font-size: 1.35rem;
 }
 
 .activity-card {
@@ -670,15 +669,15 @@ form input {
 
 	.search-btn .fa-magnifying-glass {
 		display: inline-block;
+		overflow: hidden;
 	}
 
 	form {
-		width: 100%;
+		width: auto;
 		margin-left: auto;
 		margin-right: auto;
 		justify-content: center;
 	}
-
 
 	.filters h3 {
 		text-align: left;
@@ -820,4 +819,9 @@ form input {
 		border-bottom: 2px solid #0065FC;
 	}
 
+	@media screen and (max-width: 340px){
+		form input{
+			max-width: 200px;
+		}
+	}
 }
